# src/main.rs
@@ -1,15 +1,16 @@
 use axum::{
     Json, Router,
-    extract::{ConnectInfo, Query},
+    extract::{ConnectInfo, Path, Query},
     http::{HeaderMap, StatusCode},
     routing::get,
 };
-use maxminddb::Reader;
+use clap::Parser;
+use ipnetwork::IpNetwork;
+use maxminddb::{Reader, Within};
 use serde::{Deserialize, Serialize};
 use std::{
     fmt::Error,
     net::{IpAddr, SocketAddr},
-    path::Path,
 };
 use tokio::sync::OnceCell;
 use tracing_subscriber::{layer::SubscriberExt, util::SubscriberInitExt};
@@ -20,7 +21,18 @@ static IPV4_ASN: OnceCell<Reader<Vec<u8>>> = OnceCell::const_new();
 static IPV6_COUNTRY: OnceCell<Reader<Vec<u8>>> = OnceCell::const_new();
 static IPV6_ASN: OnceCell<Reader<Vec<u8>>> = OnceCell::const_new();
 
-#[derive(Serialize, Deserialize, Debug)]
+#[derive(Parser, Debug)]
+struct Args {
+    #[arg(
+        short,
+        long,
+        default_value_t = false,
+        help = "enable experimental routes"
+    )]
+    experimental: bool,
+}
+
+#[derive(Serialize, Deserialize, Debug, Clone)]
 pub struct Asn {
     autonomous_system_number: usize,
     autonomous_system_organization: String,
@@ -58,7 +70,7 @@ impl RequestedAddress {
     }
 }
 
-async fn init_reader(path: impl AsRef<Path>) -> Result<Reader<Vec<u8>>, Error> {
+async fn init_reader(path: impl AsRef<std::path::Path>) -> Result<Reader<Vec<u8>>, Error> {
     let content = tokio::fs::read(path).await.unwrap();
     let handle = tokio::spawn(async {
         let reader = maxminddb::Reader::from_source(content).unwrap();
@@ -170,8 +182,108 @@ async fn index(
     }
 }
 
+#[derive(Serialize, Deserialize, Debug, Clone)]
+pub struct AsnResponse {
+    asn: Asn,
+    networks: Option<Vec<String>>,
+}
+
+impl AsnResponse {
+    pub fn default(asn: Asn) -> Self {
+        Self::new(asn, None)
+    }
+
+    pub fn new(asn: Asn, networks: Option<Vec<String>>) -> Self {
+        AsnResponse { asn, networks }
+    }
+}
+
+// TODO(neeythann):
+// - validate Path(asn) with ISO 3166-1 alpha-2
+// - cache this result at startup
+async fn endpoint_get_asn(Path(asn): Path<usize>) -> Result<Json<AsnResponse>, StatusCode> {
+    let network4: IpNetwork = "0.0.0.0/0".parse().unwrap();
+    let network6: IpNetwork = "::0/0".parse().unwrap();
+    let mut net: Vec<String> = vec![];
+
+    let mut asn_info: Option<Asn> = None;
+
+    let mut iter: Within<Asn, _> = IPV4_ASN.get().unwrap().within(network4).unwrap();
+    while let Some(next) = iter.next() {
+        let item = next.unwrap();
+        if item.info.autonomous_system_number != asn {
+            continue;
+        }
+
+        if asn_info.is_none() {
+            asn_info = Some(item.info.clone());
+        }
+        net.push(item.ip_net.to_string())
+    }
+    iter = IPV6_ASN.get().unwrap().within(network6).unwrap();
+    while let Some(next) = iter.next() {
+        let item = next.unwrap();
+        if item.info.autonomous_system_number != asn {
+            continue;
+        }
+        net.push(item.ip_net.to_string())
+    }
+
+    Ok(Json(AsnResponse::new(asn_info.unwrap(), Some(net))))
+}
+
+#[derive(Serialize, Deserialize, Debug)]
+pub struct CountryResponse {
+    country: Country,
+    networks: Option<Vec<String>>,
+}
+
+// TODO(neeythann):
+// - validate Path(country) with ISO 3166-1 alpha-2
+// - cache this result at startup
+async fn endpoint_get_country(
+    Path(country_code): Path<String>,
+) -> Result<Json<CountryResponse>, StatusCode> {
+    if country_code.len() != 2 {
+        return Err(StatusCode::BAD_REQUEST);
+    }
+
+    let mut net: Vec<String> = vec![];
+    let mut country_info: Option<Country> = None;
+
+    let network4: IpNetwork = "0.0.0.0/0".parse().unwrap();
+    let mut iter: Within<Country, _> = IPV4_COUNTRY.get().unwrap().within(network4).unwrap();
+    while let Some(next) = iter.next() {
+        let item = next.unwrap();
+        if item.info.country_code != country_code {
+            continue;
+        }
+
+        if country_info.is_none() {
+            country_info = Some(item.info);
+        }
+        net.push(item.ip_net.to_string())
+    }
+
+    let network6: IpNetwork = "::0/0".parse().unwrap();
+    iter = IPV6_COUNTRY.get().unwrap().within(network6).unwrap();
+    while let Some(next) = iter.next() {
+        let item = next.unwrap();
+        if item.info.country_code != country_code {
+            continue;
+        }
+        net.push(item.ip_net.to_string())
+    }
+
+    Ok(Json(CountryResponse {
+        country: country_info.unwrap(),
+        networks: Some(net),
+    }))
+}
+
 #[tokio::main]
 async fn main() {
+    let args = Args::parse();
     tracing_subscriber::registry()
         .with(tracing_subscriber::fmt::layer())
         .init();
@@ -191,7 +303,15 @@ async fn main() {
         .get_or_init(|| async { init_reader("asn-ipv6.mmdb").await.unwrap() })
         .await;
 
-    let routes = Router::new().route("/", get(index));
+    let mut routes = Router::new().route("/", get(index));
+
+    if args.experimental {
+        routes = routes.merge(
+            Router::new()
+                .route("/AS/{asn}", get(endpoint_get_asn))
+                .route("/country/{country_code}", get(endpoint_get_country)),
+        );
+    }
     let listener = tokio::net::TcpListener::bind("0.0.0.0:8000").await.unwrap();
     axum::serve(
         listener,
